<resources>

    <string name="app_name">Lin App</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AppLin</string>
    <string name="edit_text">Type something here...</string>
    <string name="send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">Message</string>
    <string name="yes">OK!</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="getPosition">Localizar</string>
    <string name="empty">-</string>
    <string name="title_activity_tutorial_app">TutorialApp</string>
    <string name="locator">Localizador</string>
    <string name="tutorial">Tutorial App</string>
    <string name="menu">Escolha a atividade:</string>
    
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="timestamp">Time Stamp:</string>
    <string name="providerName">Provider Name: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="altitude">Altitude:</string>
    <string name="bearing">Bearing: </string>
    <string name="speed">Speed: </string>
    <string name="bundleKeySet">BundleKeySet:</string>
    <string name="gps_on">GPS Ligado</string>
    <string name="gps_off">GPS Desligado</string>
</resources>